# dashboard-api-python

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HTTPX-MIGRATION.md  LICENSE  OASV3-MIGRATION.md  Pipfile  README.md  SECURITY.md  TODO.md  VERSIONING.md  convert_to_aio.py  meraki.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.github/: .last-openapi-beta-release  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: codeql-analysis.yml  create-release.yml  dependabot-auto-merge.yml  enable-early-access.yml  lint-library-generator.yml  publish-release.yml  regenerate-library.yml  test-library-generator.yml  test-library.yml  test-pr.yml  v3-drift-detection.yml  watch-openapi-release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/reports/: MILESTONE_SUMMARY-v1.1.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
changelog.d/: +httpx-migration.changed.md  +log-x-request-id-on-5xx.added.md
docs/: HTTPX-MIGRATION.md  SMARTFLOW.md  generation-report.md  releasing.md  smartflow-vectors.json
examples/: aio_get_pages_iterator.py  aio_ips2firewall.py  aio_ips2firewall_v1.py  aio_org_wide_clients.py  aio_org_wide_clients_v0.py  aio_org_wide_clients_v1.py  apiData2CSV_v0.py  apiData2CSV_v1.py  async_crud_lifecycle.py  bulk_firmware_upgrade_manager.py  camera_boundary_ranges_example.py  find_early_access_operations.py  get_pages_iterator.py  local_subnet_dumper.py  org_wide_clients.py  org_wide_clients_v0.py  org_wide_clients_v1.py  organization_deleter.py  wireless_rf_profiles_overview.py
examples/ci/: enable_all_early_access.py
examples/merakiApplianceVlanToL3SwitchInterfaceMigrator/: mappings.json  merakiApplianceVlanToL3SwitchInterfaceMigrator.py  settings.json
examples/ssid_tool/: defaults.json  ssid_tool.py
generator/: async_class_template.jinja2  async_function_template.jinja2  batch_class_template.jinja2  batch_function_template.jinja2  class_template.jinja2  common.py  function_template.jinja2  generate_library.py  generate_library_oasv2.py  generate_library_oasv3.py  generate_library_v3.py  generate_snippets.py  generate_stubs.py  parser_v3.py  readme.md  stub_template.jinja2
meraki/: __init__.py  __init__.py.bak  _version.py  common.py  config.py  convert_to_aio.py  encoding.py  exceptions.py  legacy.py  response_handler.py  rest_session.py  rest_session.py.bak  smart_flow.py  smart_limiter.py
meraki/aio/: __init__.py  rest_session.py
meraki/api/: action_batches.py  administered.py  admins.py  alert_settings.py  api_usage.py  appliance.py  assistant.py  bluetooth_clients.py  bluetooth_settings.py  camera.py  camera_quality_retention_profiles.py  cameras.py  campusGateway.py  cellularGateway.py  cellular_uplink_configurations.py  change_log.py  clients.py  config_templates.py  connectivity_monitoring_destinations.py  content_filtering_categories.py  content_filtering_rules.py  dashboard_branding_policies.py  devices.py  events.py  firewalled_services.py  floorplans.py  group_policies.py  http_servers.py  insight.py  intrusion_settings.py  licenses.py  licensing.py  link_aggregations.py  malware_settings.py  management_interface_settings.py  meraki_auth_users.py  mg_connectivity_monitoring_destinations.py  mg_dhcp_settings.py  mg_lan_settings.py  mg_port_forwarding_rules.py  (+54 more)
meraki/session/: __init__.py  async_.py  base.py  sync.py
meraki_v0/: __init__.py  config.py  convert_to_aio.py  exceptions.py  legacy.py  rest_session.py
meraki_v0/aio/: __init__.py  rest_session.py
meraki_v0/api/: action_batches.py  admins.py  alert_settings.py  api_usage.py  bluetooth_clients.py  bluetooth_settings.py  camera_quality_retention_profiles.py  cameras.py  change_log.py  clients.py  connectivity_monitoring_destinations.py  content_filtering_categories.py  content_filtering_rules.py  dashboard_branding_policies.py  devices.py  events.py  firewalled_services.py  floor_plans.py  floorplans.py  group_policies.py  http_servers.py  intrusion_settings.py  licenses.py  link_aggregations.py  malware_settings.py  management_interface_settings.py  mg_connectivity_monitoring_destinations.py  mg_dhcp_settings.py  mg_lan_settings.py  mg_port_forwarding_rules.py  mg_subnet_pool_settings.py  mg_uplink_settings.py  monitored_media_servers.py  mr_l3_firewall.py  mv_sense.py  mx_1_1_nat_rules.py  (+40 more)
meraki_v1/: __init__.py  config.py  exceptions.py  rest_session.py
notebooks/: README.md  merakiOfflineSwitchFinder.ipynb  merakiOfflineSwitchesDemo.ipynb  merakiSSIDLimitsChecker.ipynb  merakiUplinkPreferenceBackup.ipynb  merakiUplinkPreferenceRestore.ipynb  notebooksReadme.md
scripts/: seed-networks.py  semantic_diff_v2_v3.py
tests/: __init__.py  conftest.py  test_dashboard_api_python_library.py
(+404 files in other folders)
