[project]
name = "meraki"
version = "2.2.0"
description = "Cisco Meraki Dashboard API library"
authors = [
    {name = "Cisco Meraki", email = "api-feedback@meraki.net"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["meraki", "dashboard", "cisco"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.32.2,<3",
    "aiohttp>=3.11.18,<4",
]

[project.urls]
Homepage = "https://github.com/meraki/dashboard-api-python"
Repository = "https://github.com/meraki/dashboard-api-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["meraki/"]

[tool.hatch.build.targets.wheel]
packages = ["meraki"]

[dependency-groups]
dev = ["pytest>=8.3.5,<10", "flake8>=7.0,<8"]
generator = ["jinja2==3.1.6"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/generator"]
