[project]
name = "meraki"
version = "3.1.0b1"
description = "Cisco Meraki Dashboard API library"
authors = [
    {name = "Cisco Meraki", email = "api-feedback@meraki.net"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["meraki", "dashboard", "cisco"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.33.1,<3",
    "aiohttp>=3.13.5,<4",
]

[project.urls]
Homepage = "https://github.com/meraki/dashboard-api-python"
Repository = "https://github.com/meraki/dashboard-api-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["meraki/"]

[tool.hatch.build.targets.wheel]
packages = ["meraki"]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<10",
    "pytest-asyncio>=1.0,<2",
    "pytest-cov>=7.1.0,<8",
    "responses>=0.25,<1",
    "flake8>=7.0,<8",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "towncrier>=24.8.0",
]
generator = ["jinja2==3.1.6"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 127

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
norecursedirs = ["tests/generator"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["meraki"]
omit = ["meraki/api/*", "meraki/aio/api/*", "meraki/aio/__init__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__"]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
name = "meraki"
title_format = "## {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/meraki/dashboard-api-python/issues/{issue})"
start_string = "<!-- towncrier release notes start -->\n"
wrap = false
all_bullets = true

# Version is passed via `--version` from a single source of truth (pyproject
# [project].version) at build time, so there is no version pinned here to drift.

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true
